--- a/site-de-vente-priv-master/pom.xml
+++ b/site-de-vente-priv-master/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.0.RELEASE</version>
+		<version>2.2.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.hanen</groupId>
@@ -19,6 +19,7 @@
 	</properties>
 
 	<dependencies>
+	
 	
   <dependency>
     <groupId>org.springframework.boot</groupId>
@@ -82,6 +83,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>class name com.hanen.site.de.vente.priv</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
 			</plugin>
 		</plugins>
 	</build>
