--- a/site-de-vente-priv-master/src/main/resources/application.properties
+++ b/site-de-vente-priv-master/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bd?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/achrefbd?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=123
 
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.open-in-view=false
 spring.data.rest.base-path=/api/v1
 
+ spring.application.admin.enabled=false
+
+security.basic.enabled=false
